packages/swc-plugin-workflow/transform/tests/errors/instance-methods/output-workflow.js
import { registerSerializationClass } from "workflow/internal/class-serialization";
/**__internal_workflows{"steps":{"input.js":{"TestClass.staticMethod":{"stepId":"step//input.js//TestClass.staticMethod"}}},"classes":{"input.js":{"TestClass":{"classId":"class//input.js//TestClass"}}}}*/;
export class TestClass {
    // Error: instance methods can't have directives
    async instanceMethod() {
        'use step';
        return 'not allowed';
    }
    // Error: instance methods can't have workflow directive either
    async anotherInstance() {
        'use workflow';
        return 'also not allowed';
    }
}
TestClass.staticMethod = globalThis[Symbol.for("WORKFLOW_USE_STEP")]("step//input.js//TestClass.staticMethod");
registerSerializationClass("class//input.js//TestClass", TestClass);
